[package]
name = "minidisc_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
indicatif = "0.17.8"
rodio = "0.17.3"

[profile.release]
lto = "fat"
